# Test

./: AttendanceLine.qml  CMakeLists.txt  ColorsNSizes.qml  JsonParser.cpp  JsonParser.h  Main.qml  Main2.qml  MyDrawer.qml  ServerCall.cpp  ServerCall.h  Subject.cpp  Subject.h  Synchronizer.cpp  Synchronizer.hpp  main.cpp
CustomColors/: CustomColors.qml  qmldir
